--- a/RainyShinyCloudy/Base.lproj/Main.storyboard
+++ b/RainyShinyCloudy/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -76,10 +77,87 @@
                                     <constraint firstItem="NR1-he-3Fd" firstAttribute="top" secondItem="AEe-Ns-75G" secondAttribute="top" constant="27" id="uNe-4c-jAK"/>
                                 </constraints>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="69" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BTh-f4-jFc">
+                                <rect key="frame" x="0.0" y="300" width="375" height="367"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="69" id="bPY-gL-RWZ" customClass="WeatherCell" customModule="RainyShinyCloudy" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="69"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bPY-gL-RWZ" id="7DL-m6-nju">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="68.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="U9g-dr-sX6">
+                                                    <rect key="frame" x="8" y="9" width="50" height="50"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Partially Cloudy Mini" translatesAutoresizingMaskIntoConstraints="NO" id="Tfy-ar-TSA">
+                                                            <rect key="frame" x="0.0" y="0.0" width="38" height="50"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="0sD-gk-00m"/>
+                                                        <constraint firstAttribute="width" constant="50" id="VkB-XX-Ebp"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="2nz-Fw-Rya">
+                                                    <rect key="frame" x="66" y="8" width="75.5" height="51"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Tuesday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YmI-Ac-JHE">
+                                                            <rect key="frame" x="0.0" y="0.0" width="75.5" height="27.5"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Cloudy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pnc-1a-vCe">
+                                                            <rect key="frame" x="0.0" y="27.5" width="56" height="23.5"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="17"/>
+                                                            <color key="textColor" red="0.75772673579674066" green="0.76587433510638303" blue="0.76587433510638303" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Jhf-dM-U8W">
+                                                    <rect key="frame" x="310" y="9" width="45" height="55"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="15°C" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="fZh-PM-wzb">
+                                                            <rect key="frame" x="0.0" y="0.0" width="45" height="27.5"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="2°C" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="yht-YN-z2Q">
+                                                            <rect key="frame" x="0.0" y="27.5" width="45" height="27.5"/>
+                                                            <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="20"/>
+                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="45.5" id="4ZC-TX-9pz"/>
+                                                        <constraint firstAttribute="height" constant="55" id="CBA-Uv-WIr"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="U9g-dr-sX6" firstAttribute="top" secondItem="7DL-m6-nju" secondAttribute="topMargin" constant="1" id="7Bm-Z0-JYy"/>
+                                                <constraint firstAttribute="trailing" secondItem="Jhf-dM-U8W" secondAttribute="trailing" constant="20" id="O4k-Ti-ju5"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="U9g-dr-sX6" secondAttribute="bottom" constant="1.5" id="j8e-WD-9ze"/>
+                                                <constraint firstItem="U9g-dr-sX6" firstAttribute="leading" secondItem="7DL-m6-nju" secondAttribute="leadingMargin" id="xOr-TJ-Lgh"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="BTh-f4-jFc" secondAttribute="bottom" id="BPT-bN-imR"/>
+                            <constraint firstAttribute="trailing" secondItem="BTh-f4-jFc" secondAttribute="trailing" id="ClQ-5Y-UKx"/>
                             <constraint firstItem="AEe-Ns-75G" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="F8s-De-srQ"/>
+                            <constraint firstItem="BTh-f4-jFc" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Jec-eN-b7K"/>
+                            <constraint firstItem="BTh-f4-jFc" firstAttribute="top" secondItem="AEe-Ns-75G" secondAttribute="bottom" id="L68-9b-mUp"/>
                             <constraint firstItem="AEe-Ns-75G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tKa-QB-ULu"/>
                             <constraint firstAttribute="trailing" secondItem="AEe-Ns-75G" secondAttribute="trailing" id="yfl-yu-gA3"/>
                         </constraints>
@@ -100,5 +178,6 @@
     </scenes>
     <resources>
         <image name="Clear" width="107" height="107"/>
+        <image name="Partially Cloudy Mini" width="38" height="31"/>
     </resources>
 </document>
